@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Refresh current folder in opener window after draft save or message sent (#1488997)
 - Fix saving draft just after entering compose window (#1489012)
 - Call resize handler in intervals to prevent lags and double onresize calls in Chrome (#1489005)
 - Fix javascript error in IE9 when loading form with placeholders into an iframe (#1489008)
